# stock-analyzer

./: .env.example  .gitignore  docker-compose.yml
postgres/: init.sh
scripts/b3/: b3.py
scripts/b3/input/: b3_income_stmt_out.txt
scripts/b3/output/: b3_codes.txt  b3_income_symbols.txt  b3_lookup_results.json  b3_sao_symbols.txt
scripts/paris/: paris.py
services/api-explorer/: .env.example  CLAUDE.md  Dockerfile  pyproject.toml  tox.ini
services/api-explorer/.claude/rules/: testing.md
services/api-explorer/src/api_explorer/core/: api.py  config.py  model.py
services/api-explorer/src/api_explorer/server/: app.py
services/api-explorer/src/api_explorer/server/templates/: index.html
services/api-explorer/test/: conftest.py  test_api.py
services/data-ingestor/: .env.example  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml
services/data-ingestor/src/data_ingestor/core/: api_client.py  config.py  db.py  jobs.py  model.py
services/data-ingestor/src/data_ingestor/server/: app.py
services/data-ingestor/src/data_ingestor/server/static/: style.css
services/data-ingestor/src/data_ingestor/server/templates/: base.html  collections.html  index.html  job_run_result.html  jobs.html  preview.html  result.html
services/data-ingestor/utils/: extract_stocks_fr.py  stock-code-fr-list-curated.txt  stock-code-fr.txt  stocks-fr.txt
services/fundascope/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  bargain-stock.md  fundascope-scores.md  income-statement-cards-sql.txt  plan-custom-view.md  pyproject.toml  side-by-side-comparison.md  tox.ini
services/fundascope/src/fundascope/core/: api.py  cache.py  info_api.py  model.py
services/fundascope/src/fundascope/server/: app.py
services/fundascope/src/fundascope/server/templates/: glossary.html  index.html
services/fundascope/src/fundascope/utils/: config.py  glossary.py
services/fundascope/templates-dark/: glossary.html  index.html
services/fundascope/test/: test_smoke.py
services/portal/: index.html
services/stock-ranker/: .env.example  CLAUDE.md  Dockerfile  edit-score-analysis.md  extend-score-expression.md  pyproject.toml  tox.ini
services/stock-ranker/src/stock_ranker/cli/: analysis_cmd.py  collection_cmd.py  display.py  main.py  metrics_cmd.py  ticker_cmd.py  wizard.py
services/stock-ranker/src/stock_ranker/core/: api.py  model.py  score_engine.py
services/stock-ranker/src/stock_ranker/core/specs/: fundascope_info.yaml
services/stock-ranker/src/stock_ranker/server/: app.py
services/stock-ranker/src/stock_ranker/server/static/: index.html
services/stock-ranker/src/stock_ranker/utils/: config.py
services/stock-ranker/test/: conftest.py  test_cli.py  test_core.py  test_score_engine.py  test_server.py
services/study-notebook/: .env.example  CLAUDE.md  Dockerfile  pyproject.toml
services/study-notebook/src/study_notebook/cli/: analysis_cmd.py  collection_cmd.py  display.py  main.py  metrics_cmd.py  ticker_cmd.py  wizard.py
services/study-notebook/src/study_notebook/core/: api.py  model.py
services/study-notebook/src/study_notebook/server/: app.py
services/study-notebook/src/study_notebook/server/static/: index.html
services/study-notebook/src/study_notebook/utils/: config.py  utils.py
services/study-notebook/test/: conftest.py  test_cli.py  test_core.py  test_server.py
