[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fundascope"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129",
    "uvicorn>=0.40",
    "pydantic>=2.12",
    "pydantic-settings>=2",
    "python-dotenv",
    "httpx>=0.28",
    "yfinance>=1.1",
    "numpy>=2",
    "pandas>=3",
    "peewee>=3.19",
    "jinja2>=3",
    "openai",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
fundascope = "fundascope.server.app:main"

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.12"
include = ["src"]
venvPath = "."
venv = "venv"

[tool.pytest.ini_options]
testpaths = ["test"]
